# gametables

./: .bumpversion.cfg  README.md  gametables.py  pyproject.toml  setup.py  test_gametables.py
examples/: conan_adv_titles.yaml  conan_catacombs.yaml  conan_ruins.yaml  star_wars_planets.yaml
gametables/: gametables.py
tests/: test_gametables.py
