[tool.poetry]
name = "gametables"
version = "0.1.0"
description = "Choose random entries from sequences in a YAML file"
authors = ["Philip Hodder <philip.hodder@encodis.com>"]
license = "MIT"
readme = "README.md"
keywords = ["gametables", "tables", "games", "playing"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
    'Topic :: Games/Entertainment :: Role-Playing'
]

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0.1"
py-expression-eval = "^0.3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.scripts]
gametables = "gametables.gametables:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
